--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -59,10 +59,11 @@
                 <li><label>Main Menu</label></li>
                 <li><a href="#/menu" id="icon_home"><span>Home</span></a></li>
                 <li><a href="#/app/job-manager" id="icon_jobs"><span>Job Queue</span></a></li>
-                <li><a href="#/app/handwheel" id="icon_handwheel"><span>Handwheel</span></a></li>
                 <li><a href="#/app/app-manager" id="icon_apps"><span>App Manager</span></a></li>
                 <li><a href="log" id="icon_log"><span>Log (Debug)</span></a></li>
                 <li><a href="#/app/config" id="icon_settings"><span>Configuration</span></a></li>
+                <li><a href="#/app/network-manager" id="icon_global"><span>Network</span></a></li>
+
                 <!--
                 <li><a href="#/app/file-executer" id="icon_folder"><span>Files & Code</span></a></li>
                 <li><a href="#" id="icon_search"><span>Search</span></a></li>
