--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -63,15 +63,8 @@
                 <li><a href="log" id="icon_log"><span>Log (Debug)</span></a></li>
                 <li><a href="#/app/config" id="icon_settings"><span>Configuration</span></a></li>
                 <li><a href="#/app/network-manager" id="icon_global"><span>Network</span></a></li>
-
-                <!--
-                <li><a href="#/app/file-executer" id="icon_folder"><span>Files & Code</span></a></li>
-                <li><a href="#" id="icon_search"><span>Search</span></a></li>
-                <li><a href="#" id="icon_global"><span>MyHQ</span></a></li>
-                <li><a href="#/menu" id="icon_apps"><span>Apps</span></a></li>
-                <li><a href="#" id="icon_social"><span>Community</span></a></li>
-                <li><a href="#/app/settings" id="icon_settings"><span>Settings</span></a></li>
-                -->
+                <li><a href="#/app/macros" id="icon_folder"><span>Macros</span></a></li>
+                
                 <li><a href="#" id="icon_colapse"><span>Collapse</span></a></li>
               </ul>
             </div>
