--- a/dashboard/apps/configuration/index.html
+++ b/dashboard/apps/configuration/index.html
@@ -595,6 +595,31 @@
               </div>
             </div>
         </div>
+
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Power Management Mode
+                <select id="driver_1pm" class="driver_input">
+                  <option value="0">Disabled</option>
+                  <option value="1">Always on</option>
+                  <option value="2">On only when in cycle</option>
+                  <option value="3">On only when moving</option>
+                </select>
+              </label>
+            </div>
+        </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Power Level</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_1pl" class="driver_input" />
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">(0-1.0)</span>
+              </div>
+            </div>
+        </div>
+
         </fieldset>
       </div>
   
@@ -633,7 +658,31 @@
                 <span class="postfix">degrees</span>
               </div>
             </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Power Management Mode
+                <select id="driver_2pm" class="driver_input">
+                  <option value="0">Disabled</option>
+                  <option value="1">Always on</option>
+                  <option value="2">On only when in cycle</option>
+                  <option value="3">On only when moving</option>
+                </select>
+              </label>
+            </div>
         </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Power Level</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_2pl" class="driver_input" />
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">(0-1.0)</span>
+              </div>
+            </div>
+        </div>
+
         </fieldset>
       </div>
 
@@ -673,6 +722,33 @@
               </div>
             </div>
         </div>
+
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Power Management Mode
+                <select id="driver_3pm" class="driver_input">
+                  <option value="0">Disabled</option>
+                  <option value="1">Always on</option>
+                  <option value="2">On only when in cycle</option>
+                  <option value="3">On only when moving</option>
+                </select>
+              </label>
+            </div>
+        </div>
+
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Power Level</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_3pl" class="driver_input" />
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">(0-1.0)</span>
+              </div>
+            </div>
+        </div>
+
+
         </fieldset>
       </div>
 
