Improve reloading strategy for apps

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -167,25 +167,11 @@
           
           <section class="main-section" style="display:none;">
             <div id="navbar_container"></div>
-
             <div id="modal_container" style="display:none;"></div>
-
-            <div id="app-client-container">
-              <iframe class="app-iframe" sandbox="allow-scripts allow-same-origin"></iframe>
-            </div>
-
-            <div id="app-studio-container" class="row">
-                <div id="app-studio-files" class="columns small-4">
-                  <div id="app-studio-filetree"></div>
-                </div>
-                <div class="app-studio-editor" class="columns small-8">
-                  <div id="app-studio-editor-widget" style="height: 500px;">
-                  </div>
-                </div>
-            </div>
-
+            <div id="app-client-container"></div>
             <div class="clear"></div>
           </section>
+          
           <a id="close_menu" class="exit-off-canvas"></a>
         </div>
       </div>
