--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -158,7 +158,7 @@
           </aside>
 
     
-          <!-- Main Content -->
+          <!-- App Menu -->
           <section class="app-section">
             <div>
               <ul id="app_menu_container"></ul>
@@ -171,7 +171,7 @@
             <div id="app-client-container"></div>
             <div class="clear"></div>
           </section>
-          
+
           <a id="close_menu" class="exit-off-canvas"></a>
         </div>
       </div>
